fix: color contrast and playwright tests (#123)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,6 +80,7 @@
 
   --color-success-500: hsl(152, 77%, 39%);
   --color-success-600: hsl(153, 91%, 30%);
+  --color-success-700: hsl(155, 90%, 24%);
 
   /* ------------ Text Colors ------------ */
   --text-color-white: var(--color-white);
@@ -96,7 +97,7 @@
   --text-color-disabled: var(--color-grey-500);
   --text-color-disabled_subtle: var(--color-grey-400);
   --text-color-error-primary: var(--color-error-600);
-  --text-color-success-primary: var(--color-success-600);
+  --text-color-success-primary: var(--color-success-700);
 
   /* ------------ Border Colors ------------ */
   --border-color-primary: var(--color-grey-300);
